fix placeholder alignment

--- a/public/style.css
+++ b/public/style.css
@@ -608,8 +608,7 @@ body {
   overflow-y: auto;
   width: 100%;
   scrollbar-width: none;
-  line-height: 1;
-  padding: 15px 0;
+  padding: 13px 0;
  
 }
 
